[package]
name = "ripdrag"
authors = ["Nicola Guerrera <guerrera.nicola@gmail.com>"]
description = "Drag and Drop files to and from the terminal"
version = "0.2.0"
readme = "README.md"
repository = "https://github.com/nik012003/ripdrag"
edition = "2021"
license-file = "LICENSE"
categories = ["command-line-utilities"]
exclude = ["/.vscode"]

[dependencies]
clap = { version = "3.2", features = ["derive"] }
gtk = { version = "0.5", package = "gtk4" }
infer = "0.11"
opener = "0.5"
url = "2.3.1"
